--- a/pages/confirmado.html
+++ b/pages/confirmado.html
@@ -11,87 +11,89 @@
   <title> Confirmación </title>
 </head>  
 <body>
-    <main>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="./index.html"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/Pedidos.html">PEDIDOS</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../pages/recetas.html">RECETAS</a>
-                  </li>
-                </ul>
+  <main>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./index.html"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/Pedidos.html">PEDIDOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/recetas.html">RECETAS</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+      <div class="logo" style="text-align: center;">
+        <h1> <a href="../index.html"> <img src="../fotos/Logo.png" alt="LogoPag" title="EliFerrarosCatering" width="200px"> </a> </h1>   
+      </div> 
+      <section class="confirm">
+        <h1> ¡TU PEDIDO FUE REALIZADO CON ÉXITO! </h1>
+        <p class="data"> Dentro de las próximas 24hrs te estará llegando un correo con los detalles de tu pedido.</h2>
+        <p class="data2"> ¡Gracias por confiar! </h2>
+        <p class="empresa"> ELI FERRARO'S CATERING</h3>
+      </section>
+  </main>
+  <hr>
+  <footer class="footer" data-store="footer">
+    <div class="container p-top-half visible-when-content-ready">
+      <div class="row">
+        <div class="footer-nav col-sm-2 col-md-2 col-lg-2 m-bottom">
+          <h4 class="footer-title" style="font-size: medium;">Navegación</h4>
+          <ul class="p-none">
+            <li class="d-block m-bottom-half-xs">
+              <a class="footer-nav-link" style="font-size: small;" href="../index.html" >Inicio</a>
+            </li>
+            <li class="d-block m-bottom-half-xs">
+              <a class="footer-nav-link" style="font-size: small;" href="./recetas.html" >Recetas</a>
+            </li>
+            <li class="d-block m-bottom-half-xs">
+              <a class="footer-nav-link" style="font-size: small;" href="https://www.instagram.com/eliferraroscatering/?hl=es-la" >Instagram</a>
+            </li>
+            <li class="d-block m-bottom-half-xs">
+              <a class="footer-nav-link" style="font-size: small;" href="./pedidos.html" >Volver a pedir</a>
+            </li>
+          </ul>
+        </div>
+        <div id="footer-store-contact" class="footer-contact m-bottom col-xs-12 col-sm-4 col-md-4 col-lg-4">
+          <div class="seals-container col-xs-12 col-sm-2 col-md-2 col-lg-2 m-bottom">
+            <h4 class="footer-title" style="font-size: medium;">Seguridad y Certificaciones</h4>
+            <img src="https://www.afip.gob.ar/images/f960/DATAWEB.jpg" width="50px">
+            <div class="custom-seals-container row">
+              <div class="custom-seal custom-seal-img container-fluid m-bottom-half">
+                <img src="//d3ugyf2ht6aenh.cloudfront.net/assets/themes/material/static/images/empty-placeholder.png?1339657641" data-src="//d3ugyf2ht6aenh.cloudfront.net/stores/413/750/themes/material/img-816516872-1558892769-263ebf0d8b1bf9d126a5677768cf24961558892769.jpg?1339657641" class="lazyload js-lazy-loading"/>
               </div>
             </div>
-        </nav>
-        <div class="logo" style="text-align: center;">
-            <h1> <a href="../index.html"> <img src="../fotos/Logo.png" alt="LogoPag" title="EliFerrarosCatering" width="200px"> </a> </h1>   
-        </div> 
-        <section class="confirm">
-            <h1> ¡TU PEDIDO FUE REALIZADO CON ÉXITO! </h1>
-            <p class="data"> Dentro de las próximas 24hrs te estará llegando un correo con los detalles de tu pedido.</h2>
-            <p class="data2"> ¡Gracias por confiar! </h2>
-            <p class="empresa"> ELI FERRARO'S CATERING</h3>
-        </section>
-    </main>
-    <hr>
-    <footer class="footer" data-store="footer">
-        <div class="container p-top-half visible-when-content-ready">
-            <div class="row">
-                <div class="footer-nav col-sm-2 col-md-2 col-lg-2 m-bottom">
-                    <h4 class="footer-title" style="font-size: medium;">Navegación</h4>
-                    <ul class="p-none">
-                        <li class="d-block m-bottom-half-xs">
-                            <a class="footer-nav-link" style="font-size: small;" href="../index.html" >Inicio</a>
-                        </li>
-                         <li class="d-block m-bottom-half-xs">
-                            <a class="footer-nav-link" style="font-size: small;" href="./recetas.html" >Recetas</a>
-                        </li>
-                        <li class="d-block m-bottom-half-xs">
-                          <a class="footer-nav-link" style="font-size: small;" href="https://www.instagram.com/eliferraroscatering/?hl=es-la" >Instagram</a>
-                        </li>
-                        <li class="d-block m-bottom-half-xs">
-                            <a class="footer-nav-link" style="font-size: small;" href="./pedidos.html" >Volver a pedir</a>
-                        </li>
-                    </ul>
-                </div>
-                <div id="footer-store-contact" class="footer-contact m-bottom col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                    <div class="seals-container col-xs-12 col-sm-2 col-md-2 col-lg-2 m-bottom">
-                        <h4 class="footer-title" style="font-size: medium;">Seguridad y Certificaciones</h4>
-                        <img src="https://www.afip.gob.ar/images/f960/DATAWEB.jpg" width="50px">
-                        <div class="custom-seals-container row">
-                           <div class="custom-seal custom-seal-img container-fluid m-bottom-half">
-                                <img src="//d3ugyf2ht6aenh.cloudfront.net/assets/themes/material/static/images/empty-placeholder.png?1339657641" data-src="//d3ugyf2ht6aenh.cloudfront.net/stores/413/750/themes/material/img-816516872-1558892769-263ebf0d8b1bf9d126a5677768cf24961558892769.jpg?1339657641" class="lazyload js-lazy-loading"/>
-                           </div>
-                        </div>
-                    </div>
-                </div>
-           </div>
-           <div class="footer-legal font-small-extra">
-                <div class="container p-top-half p-bottom-half visible-when-content-ready">
-                    <div class="row">
-                      <div class="powered-by col-sm-4 text-left text-center-xs m-top-half m-bottom-half">
-                      </div>
-                       <div class="copyright-container col-sm-8 text-right text-center-xs m-top-half m-bottom-half" style="font-size: medium;">
-                           Copyright EliFerrarosCatering - 2022. Todos los derechos reservados.
-                           <div class="claim-link d-inline-block m-left-quarter m-top-half-xs" style="font-size: medium;">
-                                Defensa de las y los consumidores. Para reclamos
-                                <a class="weight-strong" href="https://www.argentina.gob.ar/produccion/defensadelconsumidor/formulario" target="_blank">ingrese aquí</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-           </div>
+          </div>
         </div>
-    </footer>
+      </div>
+      <div class="footer-legal font-small-extra">
+        <div class="container p-top-half p-bottom-half visible-when-content-ready">
+          <div class="row">
+            <div class="powered-by col-sm-4 text-left text-center-xs m-top-half m-bottom-half">
+            </div>
+            <div class="copyright-container col-sm-8 text-right text-center-xs m-top-half m-bottom-half" style="font-size: medium;">
+              Copyright EliFerrarosCatering - 2022. Todos los derechos reservados.
+              <div class="claim-link d-inline-block m-left-quarter m-top-half-xs" style="font-size: medium;">
+                Defensa de las y los consumidores. Para reclamos
+                <a class="weight-strong" href="https://www.argentina.gob.ar/produccion/defensadelconsumidor/formulario" target="_blank">ingrese aquí</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
