--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
       </div>
     </nav>
-    <div class="logo" style="text-align: center;">
+    <div style="text-align: center;">
       <h1> <a href="./index.html"> <img src="./fotos/Logo.png" alt="LogoPag" title="EliFerrarosCatering" width="200px"> </a> </h1>   
     </div>
     <p class="negocio">ELI FERRARO'S CATERING</p>
