--- a/pages/recetapddl.html
+++ b/pages/recetapddl.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="../fotos/Logo.png">
-  <meta name="description" content="Mi nombre es Eli Ferraro y disfruto mucho cocinar. Te dejo recetas ricas y divertidas para que intentes en tu casa. También podes encargar cualquier comida que te guste!">
-  <meta name="keywords" content="DULCE, POSTRES, PEDIR, ENCARGAR, CASERO, RECETAS">
+  <meta name="description" content="Mi nombre es Eli Ferraro y disfruto mucho cocinar. Te dejo la receta del Panqueque de Dulce de Leche para que hagas en tu casa. También podes encargar cualquier comida que te guste!">
+  <meta name="keywords" content="PANQUEQUES DDL, PANQUEQUES, DULCE, POSTRES, PEDIR, ENCARGAR, CASERO, RECETAS">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
   rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/estilo.css">
